抽屉效果主界面简单demo，可用、未完善版

--- a/SmartMemo/res/layout/activity_menu.xml
+++ b/SmartMemo/res/layout/activity_menu.xml
@@ -3,6 +3,7 @@
     android:layout_width="200.0dip"
     android:layout_height="fill_parent"
     android:orientation="vertical" 
+    android:background="@color/dark_blue"
     >
     
     <Button 
