--- a/SmartMemo/res/layout/activity_main.xml
+++ b/SmartMemo/res/layout/activity_main.xml
@@ -1,16 +1,23 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
-
-    <TextView
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" 
+    android:background="@color/mibai"
+    >
+    
+     <Button 
+         android:id="@+id/open"
+         android:layout_height="wrap_content"
+         android:layout_width="wrap_content"
+         android:text="打开菜单"/>
+    
+    <TextView 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:text="这是内容"
+        android:textSize="20.0sp"
+        android:textColor="#ff000000"
+        android:layout_gravity="center"/>
 
-</RelativeLayout>
+</LinearLayout>
