--- a/SmartMemo/res/layout/activity_sliding.xml
+++ b/SmartMemo/res/layout/activity_sliding.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     >
     
-    <com.telc.domain.SlidingView
+    <com.telc.domain.slidingMenu.SlidingView
         android:id="@+id/slidingView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"/>
