--- a/SmartMemo/res/layout/activity_sliding.xml
+++ b/SmartMemo/res/layout/activity_sliding.xml
@@ -1,13 +1,33 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical"
-    >
-    
-    <com.telc.domain.slidingMenu.SlidingView
-        android:id="@+id/slidingView"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"/>
+<android.support.v4.widget.DrawerLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+android:id="@+id/sliding_layout"
+android:layout_width="match_parent"
+android:layout_height="match_parent">
 
-</LinearLayout>
+<FrameLayout 
+    android:id="@+id/frame"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/lightblue">
+    <include layout="@layout/activity_realtime_memo"/>
+</FrameLayout>
+    
+
+<ListView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/list"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent" 
+    android:background="@color/dimgrey"
+    android:layout_gravity="start"
+    android:alpha="0.5"
+    android:dividerHeight="12dp"
+    android:headerDividersEnabled="false"
+    android:footerDividersEnabled="false"
+    android:listSelector="@color/ivory"
+    >
+    </ListView>
+  
+</android.support.v4.widget.DrawerLayout>
+
+
