--- a/SmartMemo/res/layout/activity_realtime_memo.xml
+++ b/SmartMemo/res/layout/activity_realtime_memo.xml
@@ -22,10 +22,12 @@
             android:textSize="25dp" />
 
         <RatingBar
+            android:id="@+id/rb_priority"
             android:layout_width="145dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="35dp" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -104,7 +106,6 @@
             android:ems="10"
             android:inputType="textMultiLine" >
 
-            <requestFocus />
         </EditText>
 
     </LinearLayout>
