Add ListView ItemClick Listener(only one Item) And Now this App need login only once unless logout

--- a/SmartMemo/res/layout/activity_realtime_memo.xml
+++ b/SmartMemo/res/layout/activity_realtime_memo.xml
@@ -3,10 +3,9 @@
     android:id="@+id/Priority"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/whitesmoke" >
+    android:background="@color/whitesmoke"
+    android:orientation="vertical" >
 
-    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
@@ -27,7 +26,6 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="35dp" />
-
     </LinearLayout>
 
     <LinearLayout
@@ -105,9 +103,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textMultiLine" >
-
         </EditText>
-
     </LinearLayout>
 
 </LinearLayout>
