--- a/SmartMemo/res/layout/activity_menu.xml
+++ b/SmartMemo/res/layout/activity_menu.xml
@@ -11,16 +11,15 @@
         android:orientation="vertical" >
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="36dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:orientation="vertical" >
 
             <ImageView
                 android:id="@+id/imageView7"
-                android:layout_width="wrap_content"
-                android:layout_height="68dp"
+                android:layout_width="fill_parent"
+                android:layout_height="80dp"
                 android:src="@drawable/img_menu_top" />
-
         </LinearLayout>
 
         <LinearLayout
@@ -29,18 +28,17 @@
 
             <ImageView
                 android:id="@+id/imageView1"
-                android:layout_width="70dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:src="@drawable/ic_launcher" />
 
             <TextView
                 android:id="@+id/textUserInfo"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
+                android:layout_height="60dp"
+                android:gravity="center_horizontal|center"
                 android:text="个人信息"
                 android:textSize="40sp" />
-
         </LinearLayout>
 
         <LinearLayout
@@ -63,9 +61,8 @@
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
-                android:layout_height="42dp"
+                android:layout_height="40dp"
                 android:text="" />
-
         </LinearLayout>
 
         <LinearLayout
@@ -87,18 +84,16 @@
                 android:id="@+id/imageView3"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="0.04"
+                
                 android:src="@drawable/ic_launcher" />
 
             <TextView
                 android:id="@+id/textMemo"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="0.57"
-                android:gravity="center"
-                android:text="备忘录"
-                android:textSize="30sp" />
-
+                android:layout_width="fill_parent"
+                android:layout_height="60dp"
+                android:gravity="left|center"
+                android:text="       备忘录"
+                android:textSize="35sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -121,18 +116,15 @@
                 android:id="@+id/imageView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.48"
                 android:src="@drawable/ic_launcher" />
 
             <TextView
                 android:id="@+id/textUnfinish"
-                android:layout_width="239dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.57"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"      
                 android:gravity="center"
                 android:text="未完成"
-                android:textSize="30sp" />
-
+                android:textSize="25sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -155,17 +147,16 @@
                 android:id="@+id/ImageView01"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.48"
+
                 android:src="@drawable/ic_launcher" />
 
             <TextView
                 android:id="@+id/textFinished"
-                android:layout_width="239dp"
+                android:layout_width="fill_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="0.57"
                 android:gravity="center"
                 android:text="已完成"
-                android:textSize="30sp" />
+                android:textSize="25sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -182,15 +173,12 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="34dp"
-            android:layout_weight="0.00"
-            android:orientation="vertical" >
-
+            android:layout_height="wrap_content"
+             >
             <TextView
                 android:id="@+id/TextView01"
                 android:layout_width="wrap_content"
-                android:layout_height="42dp" />
-
+                android:layout_height="40dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -213,17 +201,15 @@
                 android:id="@+id/ImageView03"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.48"
                 android:src="@drawable/ic_launcher" />
 
             <TextView
                 android:id="@+id/textExplain"
-                android:layout_width="239dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="0.57"
                 android:gravity="center"
                 android:text="使用说明"
-                android:textSize="30sp" />
+                android:textSize="25sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -245,18 +231,16 @@
             <ImageView
                 android:id="@+id/ImageView07"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.48"
+                android:layout_height="match_parent"
                 android:src="@drawable/ic_launcher" />
 
             <TextView
                 android:id="@+id/textAbout"
-                android:layout_width="239dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="0.57"
                 android:gravity="center"
                 android:text="关于"
-                android:textSize="30sp" />
+                android:textSize="25sp" />
         </LinearLayout>
 
         <LinearLayout
