--- a/SmartMemo/res/layout/activity_content.xml
+++ b/SmartMemo/res/layout/activity_content.xml
@@ -3,7 +3,8 @@
     android:id="@+id/content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightblue" xmlns:android="http://schemas.android.com/apk/res/android">
+    android:background="@color/lightblue" 
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
         android:layout_width="match_parent"
