--- a/SmartMemo/res/layout/activity_realtime_memo.xml
+++ b/SmartMemo/res/layout/activity_realtime_memo.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout 
-    android:id="@+id/realtime"
+    
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lightblue" 
@@ -14,24 +14,21 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="60dp" >
 
         <TextView
             android:id="@+id/textImportant"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="50dp"
-            android:text="重要程度:"
+            android:text="尽快完善这个界面"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="25dp" />
 
         <RatingBar
             android:id="@+id/rb_priority"
             android:layout_width="145dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="35dp" />
+            android:layout_height="wrap_content" />
+
     </LinearLayout>
 
     <LinearLayout
