--- a/SmartMemo/res/layout/activity_menu.xml
+++ b/SmartMemo/res/layout/activity_menu.xml
@@ -3,7 +3,7 @@
     android:id="@+id/menu"
     android:layout_width="match_parent"
     android:layout_height="match_parent" 
-    android:background="@color/lightgrey">
+    android:background="#424242">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -24,7 +24,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="48dp" >
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="16dp"
+                android:layout_height="wrap_content"
+                android:text="" />
 
             <ImageView
                 android:id="@+id/imageView1"
@@ -35,10 +41,12 @@
             <TextView
                 android:id="@+id/textUserInfo"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:gravity="center_horizontal|center"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical|center_horizontal"
                 android:text="个人信息"
+                android:textColor="@color/honeydew"
                 android:textSize="40sp" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -61,7 +69,7 @@
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
-                android:layout_height="40dp"
+                android:layout_height="16dp"
                 android:text="" />
         </LinearLayout>
 
@@ -78,7 +86,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="48dp" >
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="16dp"
+                android:layout_height="wrap_content"
+                android:text="" />
 
             <ImageView
                 android:id="@+id/imageView3"
@@ -90,10 +104,12 @@
             <TextView
                 android:id="@+id/textMemo"
                 android:layout_width="fill_parent"
-                android:layout_height="60dp"
+                android:layout_height="match_parent"
                 android:gravity="left|center"
                 android:text="       备忘录"
+                android:textColor="@color/honeydew"
                 android:textSize="35sp" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -110,21 +126,29 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="48dp" >
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="16dp"
+                android:layout_height="wrap_content"
+                android:text="" />
 
             <ImageView
                 android:id="@+id/imageView5"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:src="@drawable/ic_launcher" />
 
             <TextView
                 android:id="@+id/textUnfinish"
                 android:layout_width="fill_parent"
-                android:layout_height="match_parent"      
+                android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="未完成"
+                android:textColor="@color/honeydew"
                 android:textSize="25sp" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -141,12 +165,18 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="48dp" >
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="16dp"
+                android:layout_height="wrap_content"
+                android:text="" />
 
             <ImageView
                 android:id="@+id/ImageView01"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
 
                 android:src="@drawable/ic_launcher" />
 
@@ -156,7 +186,9 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="已完成"
+                android:textColor="@color/honeydew"
                 android:textSize="25sp" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -178,7 +210,7 @@
             <TextView
                 android:id="@+id/TextView01"
                 android:layout_width="wrap_content"
-                android:layout_height="40dp" />
+                android:layout_height="16dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -195,12 +227,18 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="48dp" >
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="16dp"
+                android:layout_height="wrap_content"
+                android:text="" />
 
             <ImageView
                 android:id="@+id/ImageView03"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:src="@drawable/ic_launcher" />
 
             <TextView
@@ -209,7 +247,9 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="使用说明"
+                android:textColor="@color/honeydew"
                 android:textSize="25sp" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -226,7 +266,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="48dp" >
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="16dp"
+                android:layout_height="wrap_content"
+                android:text="" />
 
             <ImageView
                 android:id="@+id/ImageView07"
@@ -240,7 +286,9 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="关于"
+                android:textColor="@color/honeydew"
                 android:textSize="25sp" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -253,6 +301,33 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/img_menu_ine" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="48dp" >
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="16dp"
+                android:layout_height="wrap_content"
+                android:text="" />
+
+            <ImageView
+                android:id="@+id/imageView8"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_launcher" />
+
+            <TextView
+                android:id="@+id/textExit"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical|center_horizontal|center"
+                android:text="退出"
+                android:textColor="@color/honeydew"
+                android:textSize="25sp" />
+
         </LinearLayout>
     </LinearLayout>
 
