--- a/SmartMemo/res/layout/welcome0.xml
+++ b/SmartMemo/res/layout/welcome0.xml
@@ -1,4 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout >
-    
-</LinearLayout>
+    <FrameLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/pager0"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:background="@color/blue" >
+
+        <LinearLayout
+            android:layout_width="313dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
+
+        </LinearLayout>
+
+    </FrameLayout>
