--- a/SmartMemo/res/layout/welcome1.xml
+++ b/SmartMemo/res/layout/welcome1.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout>
-    
-    
-</LinearLayout>
+    <FrameLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/pager1"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent" 
+        android:background="@color/gainsboro">
+
+       <LinearLayout
+            android:layout_width="252dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
+
+        </LinearLayout>
+
+    </FrameLayout>
