改进一些周期性提醒界面代码，忽略.proptie文件

--- a/SmartMemo/res/layout/activity_realtime_memo.xml
+++ b/SmartMemo/res/layout/activity_realtime_memo.xml
@@ -69,7 +69,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_alignTop="@+id/et_location"
                 android:layout_marginLeft="140dp"
-                android:src="@drawable/maps" />
+                android:src="@drawable/ic_location" />
         </RelativeLayout>
     </LinearLayout>
 
