--- a/SmartMemo/res/layout/activity_periodic.xml
+++ b/SmartMemo/res/layout/activity_periodic.xml
@@ -17,7 +17,7 @@
             android:textSize="15sp" />
 
         <RatingBar
-            android:id="@+id/ratingBar1"
+            android:id="@+id/ratingBarPeriodic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -35,7 +35,7 @@
             android:text="周期：" />
 
         <Spinner
-            android:id="@+id/spinner1"
+            android:id="@+id/spinnerPeriodic"
             android:layout_width="174dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.46" />
@@ -54,7 +54,7 @@
             android:textSize="15sp" />
 
         <EditText
-            android:id="@+id/editText1"
+            android:id="@+id/editPeriodicLocation"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -64,7 +64,7 @@
         </EditText>
 
         <ImageView
-            android:id="@+id/imageView1"
+            android:id="@+id/imagePeriodicLocation"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:src="@drawable/ic_location" />
@@ -82,7 +82,7 @@
             android:text="内容：" />
 
         <EditText
-            android:id="@+id/editText2"
+            android:id="@+id/editPeriodicContent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
