--- a/SmartMemo/res/layout/activity_login_register.xml
+++ b/SmartMemo/res/layout/activity_login_register.xml
@@ -3,9 +3,11 @@
     android:id="@+id/RelativeLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/loginbackground"
+    android:background="@drawable/login_bg"
     android:orientation="vertical" >
 
+    
+    
     <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="wrap_content"
