--- a/SmartMemo/res/layout/welcome2.xml
+++ b/SmartMemo/res/layout/welcome2.xml
@@ -1,22 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <LinearLayout
+    <FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/pager2"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:background="@color/olive" >
+        android:layout_height="match_parent" 
+        android:background="@color/gainsboro">
 
-        <LinearLayout
-            android:layout_width="241dp"
+       <LinearLayout
+            android:layout_width="252dp"
             android:layout_height="match_parent"
             android:orientation="vertical" >
 
-            <Button
-                android:id="@+id/btn_enter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="开始体验！~" />
-
         </LinearLayout>
 
-    </LinearLayout>
+    </FrameLayout>
