--- a/SmartMemo/res/layout/activity_login_register.xml
+++ b/SmartMemo/res/layout/activity_login_register.xml
@@ -6,63 +6,93 @@
     android:background="@drawable/login_bg"
     android:orientation="vertical" >
 
-    
-    
-    <LinearLayout
-        android:id="@+id/linearLayout1"
+        <ImageView
+        android:id="@+id/image"
         android:layout_width="wrap_content"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="112dp"
+        android:layout_marginTop="37dp"
+        android:background="@drawable/login_logo" />
+    
+    <LinearLayout
+        android:id="@+id/input"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/image"
+        android:layout_marginLeft="28.0dip"
+        android:layout_marginRight="28.0dip"
+        android:layout_marginTop="42dp"
+        android:background="@drawable/login_input"
         android:orientation="vertical" >
 
         <EditText
-            android:id="@+id/et_phoneNum"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:id="@+id/et_userphone"
+            android:layout_width="fill_parent"
+            android:layout_height="44.0dip"
             android:background="@color/white"
-            android:ems="10"
-            android:hint="请输入手机号码"
-            android:textColor="@color/black"
-            android:textColorLink="@color/black" />
+            android:hint="请输入电话号码"
+            android:inputType="number"
+            android:maxLength="16"
+            android:maxLines="1"
+            android:paddingLeft="12.0dip"
+            android:textColor="#ff1d1d1d"
+            android:textColorHint="#ff666666"
+            android:textSize="16.0sp" />
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1.0px"
+            android:layout_marginLeft="1.0px"
+            android:layout_marginRight="1.0px"
+            android:background="#ffc0c3c4" />
 
         <EditText
-            android:id="@+id/et_password"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="1dp"
+            android:id="@+id/login_password"
+            android:layout_width="fill_parent"
+            android:layout_height="44.0dip"
             android:background="@color/white"
-            android:ems="10"
+            android:gravity="center_vertical"
             android:hint="请输入密码"
             android:inputType="textPassword"
-            android:textColor="@color/black"
-            android:textColorLink="@color/black" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-
-            <ImageView
-                android:id="@+id/image_register"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_marginLeft="60dp"
-                android:layout_marginTop="30dp"
-                android:layout_toRightOf="@+id/image_login"
-                android:src="@drawable/register" />
-
-            <ImageView
-                android:id="@+id/image_login"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignTop="@+id/image_register"
-                android:src="@drawable/login" />
-
-        </RelativeLayout>
-
+            android:maxLength="16"
+            android:maxLines="1"
+            android:paddingLeft="12.0dip"
+            android:textColor="#ff1d1d1d"
+            android:textColorHint="#ff666666"
+            android:textSize="16.0sp" />
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="50dip"
+        android:layout_alignRight="@+id/input"
+        android:layout_below="@id/input"
+        android:layout_marginLeft="28.0dip"
+        android:layout_marginTop="12.0dip"
+        android:gravity="center" >
+
+        <Button
+            android:id="@+id/btn_login"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/xml_layout_background"
+            android:text="登录"
+            android:textColor="@color/white" />
+
+        <Button
+            android:id="@+id/btn_regist"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/xml_layout_background"
+            android:text="注册"
+            android:textColor="@color/white" />
+    </LinearLayout>
+
+
 
 </RelativeLayout>
