--- a/SmartMemo/res/layout/activity_menu.xml
+++ b/SmartMemo/res/layout/activity_menu.xml
@@ -62,7 +62,8 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="" />
+                        android:text=""
+                        android:textSize="10sp" />
                 </LinearLayout>
 
                 <TextView
@@ -87,7 +88,8 @@
                         android:id="@+id/textView4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="" />
+                        android:text="" 
+                         android:textSize="10sp"/>
                 </LinearLayout>
 
                 <TextView
@@ -143,7 +145,8 @@
 
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                         android:textSize="10sp" />
                 </LinearLayout>
 
                 <TextView
@@ -167,7 +170,8 @@
 
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content" 
+                         android:textSize="10sp"/>
                 </LinearLayout>
 
                 <TextView
