--- a/SmartMemo/res/layout/welcome1.xml
+++ b/SmartMemo/res/layout/welcome1.xml
@@ -4,7 +4,7 @@
         android:id="@+id/pager1"
         android:layout_width="wrap_content"
         android:layout_height="match_parent" 
-        android:background="@color/gainsboro">
+        android:background="@drawable/welcome_bg2">
 
        <LinearLayout
             android:layout_width="252dp"
