--- a/SmartMemo/res/layout/activity_menu.xml
+++ b/SmartMemo/res/layout/activity_menu.xml
@@ -19,7 +19,7 @@
                 android:id="@+id/textView1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/menu_top_bg" />
+                android:background="@drawable/menu_top_bg2" />
 
             <LinearLayout
                 android:layout_width="match_parent"
