--- a/SmartMemo/res/layout/welcome3.xml
+++ b/SmartMemo/res/layout/welcome3.xml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/pager3"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/pager3"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:background="@drawable/welcome_bg4" >
+
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:background="@color/olive" >
+        android:layout_weight="0.05" >
 
-        <LinearLayout
-            android:layout_width="241dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical" >
+        <Button
+            android:id="@+id/btn_enter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="124dp"
+            android:background="@drawable/xml_layout_background"
+            android:textColor="@color/white"
+            android:text="从此让生活更轻松" />
 
-            <Button
-                android:id="@+id/btn_enter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="开始体验！~" />
+    </RelativeLayout>
 
-        </LinearLayout>
-
-    </LinearLayout>
+</LinearLayout>
