--- a/SmartMemo/res/layout/activity_content.xml
+++ b/SmartMemo/res/layout/activity_content.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical" >
 
         <ListView
-            android:id="@+id/listView1"
+            android:id="@+id/listMemoList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
         </ListView>
