--- a/SmartMemo/res/layout/pager.xml
+++ b/SmartMemo/res/layout/pager.xml
@@ -1,15 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
        <android.support.v4.view.ViewPager
-            android:id="@+id/pager"
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent" >
+           android:id="@+id/pager"
+           android:layout_width="fill_parent"
+           android:layout_height="match_parent" >
 
         </android.support.v4.view.ViewPager>
 
-</LinearLayout>
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="52dp"
+           android:layout_gravity="bottom"
+           android:gravity="center_horizontal"
+           android:orientation="horizontal" >
+
+           <ImageView
+               android:id="@+id/imageDot1"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:src="@drawable/img_dot_selected" />
+
+           <ImageView
+               android:id="@+id/imageDot2"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:src="@drawable/img_dot_unselect" />
+
+           <ImageView
+               android:id="@+id/imageDot3"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:src="@drawable/img_dot_unselect"  />
+
+           <ImageView
+               android:id="@+id/imageDot4"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:src="@drawable/img_dot_unselect"  />
+
+       </LinearLayout>
+
+</FrameLayout>
