--- a/SmartMemo/res/layout/activity_periodic.xml
+++ b/SmartMemo/res/layout/activity_periodic.xml
@@ -28,31 +28,43 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="38dp"
+            android:layout_height="47dp"
+            android:src="@drawable/ic_calendar" />
+
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            android:layout_weight="0.49"
+            android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:text="周期：" />
 
         <Spinner
             android:id="@+id/spinnerPeriodic"
-            android:layout_width="174dp"
+            android:layout_width="214dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.54" />
+            android:layout_weight="0.39" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="27dp"
+            android:layout_height="38dp"
+            android:src="@drawable/ic_memo_list" />
+
         <TextView
             android:id="@+id/textPeriodicDetail"
             android:layout_width="68dp"
             android:layout_height="match_parent"
+            android:layout_weight="1.88"
             android:gravity="center_vertical"
-            android:text="详细：" />
+            android:text="周期详细：" />
 
         <EditText
             android:id="@+id/editTextPeriodicDetail"
@@ -71,17 +83,22 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.12" >
 
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="28dp"
+            android:layout_height="49dp"
+            android:src="@drawable/ic_new" />
+
         <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.18"
+            android:layout_height="32dp"
             android:text="内容：" />
 
         <EditText
             android:id="@+id/editPeriodicContent"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="52dp"
             android:layout_weight="0.26"
             android:ems="10"
             android:inputType="textMultiLine" />
