--- a/SmartMemo/res/layout/item_list_location.xml
+++ b/SmartMemo/res/layout/item_list_location.xml
@@ -1,23 +1,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#ff33ff"
+    android:layout_height="50dp"
+    android:background="#F0EBE6"
     android:orientation="horizontal"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp"
     tools:context=".MainActivity" >
 
  	<ImageView 
  	    android:id="@+id/iv_ltem_list_location"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
- 	    android:background="@drawable/ic_launcher"
+ 	    android:layout_gravity="center"
+ 	    android:background="@drawable/z_icon_search"
  	    />
     <TextView 
  	    android:id="@+id/tv_ltem_list_location"
+ 	    android:layout_marginLeft="20dp"
  	    android:layout_width="match_parent"
  	    android:layout_height="match_parent"
- 	    android:background="#33ffff"
- 	    
+ 	    android:gravity="center_vertical"
  	    />
    
 </LinearLayout>
