--- a/SmartMemo/res/layout/suggestlist.xml
+++ b/SmartMemo/res/layout/suggestlist.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffff33"
+    android:background="#CEBEAE"
     android:orientation="vertical"
     tools:context=".MainActivity" >
 
