--- a/SmartMemo/res/layout/listview_layout.xml
+++ b/SmartMemo/res/layout/listview_layout.xml
@@ -5,33 +5,49 @@
     android:orientation="vertical" >
 
     <LinearLayout
+        android:id="@+id/memo_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="vertical"
+         >
 
-        <TextView
-            android:id="@+id/textListCategory"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.57"
-            android:text="textListCategory" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
-        <RatingBar
-            android:id="@+id/ratingBarListItem"
-            style="?android:attr/ratingBarStyleSmall"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/textListContent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1.08"
+                android:gravity="top"
+                android:text="textListContent"
+                android:textSize="25sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:numStars="5"
-            android:stepSize="1" />
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/textListCategory"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="textListCategory" />
+
+            <RatingBar
+                android:id="@+id/ratingBarListItem"
+                style="?android:attr/ratingBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:numStars="5"
+                android:stepSize="1"
+          />
+
+        </LinearLayout>
+
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/textListContent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1.08"
-        android:gravity="top"
-        android:text="textListContent"
-        android:textSize="25sp" />
 
 </LinearLayout>
