--- a/SmartMemo/res/layout/activity_timing.xml
+++ b/SmartMemo/res/layout/activity_timing.xml
@@ -3,7 +3,6 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
-
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -50,7 +49,7 @@
                         android:layout_width="fill_parent"
                         android:layout_marginLeft="2.0dip"
                         android:layout_marginRight="2.0dip"
-                         android:background="@drawable/table_button_single_bg"
+                        android:background="@drawable/table_button_single_bg"
                         android:paddingBottom="16.0dip"
                         android:paddingTop="16.0dip" >
 
@@ -76,25 +75,22 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:ems="10" />
-                            
                         </LinearLayout>
                     </TableRow>
                 </TableLayout>
             </LinearLayout>
-
             <Switch
                 android:id="@+id/sw_timing"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textOn="启用"
-                android:textOff="禁止"
-                />
+                android:textOff="地点关闭"
+                android:textOn="地点开启"
+                 />
 
             <LinearLayout
                 android:id="@+id/layout_timiting_location"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content" 
-                android:visibility="gone">
+                android:layout_height="wrap_content" >
 
                 <TableLayout
                     android:id="@+id/MorePageTableLayout_Client"
@@ -105,11 +101,11 @@
                     android:stretchColumns="0" >
 
                     <TableRow
-                        android:id="@+id/account_setting"
+                        android:id="@+id/tabl_location"
                         android:layout_width="fill_parent"
                         android:layout_marginLeft="2.0dip"
                         android:layout_marginRight="2.0dip"
-                         android:background="@drawable/table_button_single_bg"
+                        android:background="@drawable/table_button_top_bg"
                         android:paddingBottom="16.0dip"
                         android:paddingTop="16.0dip" >
 
@@ -134,39 +130,12 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:hint="选填"
-                                android:enabled="false"
-                                android:ems="10" />
-                            
+                                android:ems="10"
+                                android:hint="选填" />
                         </LinearLayout>
                     </TableRow>
-                </TableLayout>
-            </LinearLayout>
-            
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10.0dip"
-                android:layout_marginTop="10.0dip"
-                android:gravity="center_vertical"
-                android:paddingLeft="4.0dip"
-                android:text=""
-                android:textColor="@color/black"
-                android:textSize="16.0sp" />
-
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content" >
-
-                <TableLayout
-                    android:id="@+id/TableLayout01"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:shrinkColumns="0"
-                    android:stretchColumns="0" >
-
                     <TableRow
-                        android:id="@+id/TableRow01"
+                        android:id="@+id/tabl_content"
                         android:layout_width="fill_parent"
                         android:layout_marginLeft="2.0dip"
                         android:layout_marginRight="2.0dip"
@@ -198,6 +167,7 @@
                                 android:ems="10" />
                         </LinearLayout>
                     </TableRow>
+                    
                 </TableLayout>
             </LinearLayout>
 
@@ -234,16 +204,13 @@
 
                         <LinearLayout
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                          
-                           >
+                            android:layout_height="wrap_content" >
 
                             <RatingBar
                                 android:id="@+id/ratingBarTimingPriority"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:numStars="5"
-                              
                                 android:stepSize="1" />
                         </LinearLayout>
                     </TableRow>
@@ -253,4 +220,3 @@
     </ScrollView>
 
 </RelativeLayout>
-
